# Berilia

./: CMakeLists.txt  Doxyfile  README.md
doc/: game.dox  index.dox
gui/: editor.json
gui/subpanels/: script_readable.json  test_pause.json
inc/: camera.h  game.h  gui.h  lighting.h  math2d.h  math3d.h  mesh.h  physics.h  script.h  shaders.h  texture.h  unity.h  util.h
meshes/: c_circuit_1.blend  c_circuit_1.blend1  c_circuit_1.dae  c_microscope.blend  c_microscope.blend1  c_microscope.dae  c_toolbox.blend  c_toolbox.dae  flowerpot.blend  flowerpot.blend1  flowerpot.dae  light_ind.blend  light_ind.blend1  light_ind.dae  player_mesh.blend  player_mesh.blend1  player_mesh.dae  test.dae  test_terrain_2.dae
shaders/frag/: black.frag  color.frag  depth.frag  gui.frag  img_shim.frag  no_tex.frag  normal.frag  particles.frag  phys_debug.frag  pp_edge_detect.frag  world_gui.frag
shaders/vert/: gui.vert  normal.vert  particles.vert  phys_debug.vert
src/: camera.cpp  game.cpp  gui.cpp  lighting.cpp  main.cpp  math2d.cpp  math3d.cpp  mesh.cpp  physics.cpp  script.cpp  shaders.cpp  texture.cpp  unity.cpp  util.cpp
textures/raw/: c_circuit_1.xcf  f_monospace.xcf  flowerpot.xcf
